--- a/EticaretSitesiCix/Areas/Admin/Views/Urun/Index.cshtml
+++ b/EticaretSitesiCix/Areas/Admin/Views/Urun/Index.cshtml
@@ -44,7 +44,7 @@
                                 }
                         else
                         {
-                            <img src="@item.Fotograf" width="50" height="40" />
+                            <img src="@Url.Content(item.Fotograf)" width="100" height="100" />
                         }
                     </td>
                     <td>
