--- a/EticaretSitesiCix/Areas/Customer/Views/Home/CategoryDetails.cshtml
+++ b/EticaretSitesiCix/Areas/Customer/Views/Home/CategoryDetails.cshtml
@@ -16,7 +16,7 @@
                         <div class="card-header">
                             @item.Adi
                         </div>
-                        <img src="@item.Fotograf" class="card-img-top" alt="..." style="height:200px">
+                        <img src="@Url.Content(@item.Fotograf)" class="card-img-top" alt="..." style="height:200px">
                         <div class="card-body">
                             <p class="card-text">@item.Aciklama</p>
                         </div>
