--- a/EticaretSitesiCix/Areas/Customer/Views/Home/Details.cshtml
+++ b/EticaretSitesiCix/Areas/Customer/Views/Home/Details.cshtml
@@ -12,7 +12,7 @@
             <div class="card mb-12">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="@Model.Urun.Fotograf" class="img-fluid rounded-start" alt="..." style="300px">
+                        <img src="@Url.Content(Model.Urun.Fotograf)" class="img-fluid rounded-start" alt="..." style="300px">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
